; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_kdf_meth.c_EVP_KDF_gettable_params.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_kdf_meth.c_EVP_KDF_gettable_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* (...)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @EVP_KDF_gettable_params(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32* (...)*, i32* (...)** %5, align 8
  %7 = icmp eq i32* (...)* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %14

9:                                                ; preds = %1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32* (...)*, i32* (...)** %11, align 8
  %13 = call i32* (...) %12()
  store i32* %13, i32** %2, align 8
  br label %14

14:                                               ; preds = %9, %8
  %15 = load i32*, i32** %2, align 8
  ret i32* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
